--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">BeatBounce</string>
+    <string-array name="language_array">
+        <item>Bahasa Indonesia</item>
+        <item>English</item>
+        <!-- Add more items as needed -->
+    </string-array>
 </resources>
